# mygit

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: main.cc  mainCompress.cc
src/commands/: add.cc  branch.cc  cat_file.cc  checkout.cc  commands.hh  commit.cc  config.cc  diff.cc  hash-object.cc  init.cc  init.hh  log.cc  ls-files.cc  merge.cc  status.cc  write_tree.cc
src/objects/: blob.cc  blob.hh  commit.cc  commit.hh  object_type.cc  object_type.hh  objects_utils.cc  objects_utils.hh  tree.cc  tree.hh
src/tests/: mainHash.cc  main_add_test.cc  main_status_test.cc
src/utils/: config.cc  config.hh  file_state.cc  file_state.hh  files.cc  files.hh  get_paths.cc  get_paths.hh  globals.cc  options.cc  options.hh  sha1.cc  sha1.hh  utils.hh  wrappers.cc  wrappers.hh  zlib.cc  zlib.hh
tests/: testsuite.sh
tests/subscripts/: init_test.sh
